--- a/package.json
+++ b/package.json
@@ -28,5 +28,19 @@
 		"webpack-stream": "^7.0.0"
 	},
 	"keywords": [],
-	"description": ""
+	"description": "",
+	"dependencies": {
+		"browserify-zlib": "^0.2.0",
+		"buffer": "^6.0.3",
+		"constants-browserify": "^1.0.0",
+		"crypto-browserify": "^3.12.1",
+		"https-browserify": "^1.0.0",
+		"os-browserify": "^0.3.0",
+		"path-browserify": "^1.0.1",
+		"querystring-es3": "^0.2.1",
+		"stream-browserify": "^3.0.0",
+		"stream-http": "^3.2.0",
+		"url": "^0.11.4",
+		"util": "^0.12.5"
+	}
 }
